# Automated-Web-Tracking-Analysis

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
scripts/: my-flow2.yaml  redoio-home.yaml
src/tracker/: action_script.py  cli.py  recorder.py  runner.py
