[project]
name = "web-tracking-analyzer"
version = "0.1.0"
description = "Drive a fully rendered website through scripted user actions, capture network traffic + WebSocket frames, decode tracking beacons, and produce a report."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.48.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
tracker = "tracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracker"]
